java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/resolve/module-info.java
/**
 * {@linkplain <error descr="Cannot resolve symbol 'Foo'">Foo</error>}
 * @see <error descr="Cannot resolve symbol 'Foo'">Foo</error>
 */
module com.ref.test.test.test {

}